--- a/Server/Serveur/Serveur.vcxproj
+++ b/Server/Serveur/Serveur.vcxproj
@@ -89,7 +89,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Simon\Desktop\TP3\TP3\Server\packages\rapidjson.1.0.2\build\native\include\rapidjson;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -152,7 +152,7 @@
     <ClInclude Include="File.h" />
     <ClInclude Include="Group.h" />
     <ClInclude Include="GroupManager.h" />
-    <ClInclude Include="JsonReader.h" />
+    <ClInclude Include="ReaderFromClient.h" />
     <ClInclude Include="JsonWriter.h" />
     <ClInclude Include="ISynchronize.h" />
     <ClInclude Include="LoginManager.h" />
@@ -168,7 +168,7 @@
     <ClCompile Include="File.cpp" />
     <ClCompile Include="Group.cpp" />
     <ClCompile Include="GroupManager.cpp" />
-    <ClCompile Include="JsonReader.cpp" />
+    <ClCompile Include="ReaderFromClient.cpp" />
     <ClCompile Include="JsonWriter.cpp" />
     <ClCompile Include="LoginManager.cpp" />
     <ClCompile Include="Server.cpp" />
