--- a/Client/Phi-Box/Phi-Box.csproj
+++ b/Client/Phi-Box/Phi-Box.csproj
@@ -79,6 +79,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Client.cs" />
+    <Compile Include="File.cs" />
     <Compile Include="GroupView.xaml.cs">
       <DependentUpon>GroupView.xaml</DependentUpon>
     </Compile>
